init()메서드 중복 수행 방지 메서드 추가